--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            background-color: yellowgreen;
+            color: black;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+       
+    </style>
 </head>
 <body>
     <h1>welcome</h1>
     <p id="welcome"></p>
+    <img src="./download.jpeg" alt="photo">
 </body>
 </html>
